--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Sylvina's personal site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Me.jpg" alt="Picture of Sylvina Tilbury" /></td>
+      <td><img src="images/Me.jpg" alt="Picture of Sylvina Tilbury" /></td>
       <td>
         <h1>Sylvina Tilbury</h1>
         <p><em><strong>Heritage IT Consultant</strong></em></p>
@@ -22,7 +23,7 @@
   </table>
 
 
-  <hr size="2" />
+  <hr />
   <h3>Qualifications</h3>
   <p>
     <ul>
@@ -31,7 +32,7 @@
       <li>GCSEs x 9</li>
     </ul>
   </p>
-  <hr size="2" />
+  <hr />
   <h3>Work Experience</h3>
   <table cellspacing="10">
     <thead>
@@ -49,7 +50,7 @@
     <tfoot>
     </tfoot>
   </table>
-  <hr size="2" />
+  <hr />
   <h3>Skills</h3>
   <table>
     <tr>
@@ -87,7 +88,7 @@
       </td>
     </tr>
   </table>
-  <hr  size="2"/>
+  <hr>
   <p><a href="hobbies.html">My Hobbies</a></p>
   <p><a href="contact.html">Contact Me</a></p>
 </body>
